# ggm

./: CMakeLists.txt  _clang-format  update.py
Include/: ggm.hpp
Scripts/: bootstrap.py  common.cmake
Source/: main.cpp
